[package]
name = "ekho"
version = "0.1.0"
authors = ["Jared Boyd <boyd.jared95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.11.0"
warp = "0.2.3"
tokio = { version = "0.2", features = ["macros"] }
sample = "*"
